Change to Kanagawa and forest theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,8 +6,8 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Hack Nerd Font Regular
-# bold_font        auto
+font_family      JetBrainsMono Nerd Font Mono
+# bold_font        a
 # italic_font      auto
 # bold_italic_font auto
 
@@ -412,7 +412,7 @@ font_family      Hack Nerd Font Regular
 #: When the mouse hovers over a terminal hyperlink, show the actual
 #: URL that will be activated when the hyperlink is clicked.
 
-# copy_on_select no
+copy_on_select yes
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, selecting text with the mouse will cause the text to be
@@ -424,6 +424,9 @@ font_family      Hack Nerd Font Regular
 
 #:     copy_on_select a1
 #:     map shift+cmd+v paste_from_buffer a1
+
+map ctrl+shift+c copy_to_clipboard
+map ctrl+shift+v paste_from_clipboard
 
 #: Note that copying to the clipboard is a security risk, as all
 #: programs, including websites open in your browser can read the
@@ -2401,9 +2404,16 @@ background_opacity 0.95
 
 #: }}}
 #
-include ./mocha.conf
+#include ./mocha.conf
 #include ./everforest.conf
-#include ./rose-pine.conf
+include ./rose-pine.conf
+#include ./kanagawa-dragon.conf
 #include ./kitty_gruvbox_theme/gruvbox_dark.conf
 #
 shell /usr/bin/zsh
+
+
+# BEGIN_KITTY_THEME
+# Kanagawa_dragon
+include current-theme.conf
+# END_KITTY_THEME
