--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -133,8 +133,6 @@ inactive-opacity-override = false;
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-# opacity-rule = []
-
 
 #################################
 #           Corners             #
@@ -254,7 +252,7 @@ detect-client-opacity = true;
 # to maximize performance for full-screen windows. Known to cause flickering
 # when redirecting/unredirecting windows.
 #
-# unredir-if-possible = false
+unredir-if-possible = true
 
 # Delay before unredirecting the window, in milliseconds. Defaults to 0.
 # unredir-if-possible-delay = 0
@@ -426,3 +424,12 @@ wintypes:
   popup_menu = { opacity = 0.8; }
   dropdown_menu = { opacity = 0.8; }
 };
+
+opacity-rule = [
+  "95:class_g = 'DBeaver' && !window_type = 'menu' && !window_type = 'popup_menu' && !window_type = 'dropdown_menu' && !window_type = 'tooltip' && !window_type = 'dialog'",
+    "100:class_g = 'Thunar' && window_type = 'popup_menu'",
+  "100:class_g = 'Thunar' && window_type = 'dropdown_menu'",
+  "100:window_type = 'popup_menu'",
+  "100:window_type = 'dropdown_menu'"
+];
+
