--- a/.config/i3/config
+++ b/.config/i3/config
@@ -26,7 +26,10 @@ default_floating_border pixel 1
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
 
-exec --no-startup-id feh --bg-fill /home/mmtrent/Pictures/astronautwallpaper.jpg
+# exec --no-startup-id feh --bg-fill /home/mmtrent/Pictures/astronautwallpaper.jpg
+
+exec --no-startup-id feh --bg-fill /home/mmtrent/Pictures/pine-watt-unsplash.jpg
+
 exec --no-startup-id picom -b --config ~/.config/picom/picom.conf
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
@@ -46,7 +49,13 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-bindsym Print exec --no-startupid scrot -s
+
+# bindsym --release $mod+Shift+p exec --no-startup-id /usr/bin/scrot -s $HOME/Pictures/screenshot_%Y-%m-%d_%H-%M-%S.png
+
+
+bindsym --release $mod+Shift+p exec --no-startup-id /usr/bin/scrot -s ~/Pictures/screenshot_%Y-%m-%d_%H-%M-%S.png
+
+# bindsym $mod+Shift+p exec --no-startupid myscrot
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -63,7 +72,7 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
-bindsym $mod+d exec --no-startup-id "dmenu_run -nf '#E0DEF4' -nb '#191724' -sb '#1f1d2e' -sf '#c4a7e7' -fn 'HackNerdFont-16' -p 'DMENU'"
+bindsym $mod+d exec --no-startup-id "dmenu_run -nf '#E0DEF4' -nb '#0d0c0c' -sb '#1f1d2e' -sf '#c5c9c5' -fn 'JetBrainsMono-16' -p 'DMENU'"
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
